--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
 
 
 <body>
-    <button id="reset">Create A New Grid</button>
+    <button id="resetButton">Create A New Grid</button>
 <div id="container"></div>
 
 
